--- a/src/App.css
+++ b/src/App.css
@@ -20,16 +20,17 @@
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+   margin: 0 auto;
+  /* padding: 2rem; */
   text-align: center;
 }
 body{
  display: flex;
-  place-items: center;
+  justify-content: center;
+align-items: center;
   min-width: 320px;
   min-height: 100vh;
+   /* max-width: 1280px; */
 }
 h1 {
   font-size: 3.2em;
@@ -120,7 +121,8 @@ color: #213547;
 .entryForm input:focus{
   border: 3px solid black;
 }
-.entryForm button{
+.entryForm button,
+.home button{
   margin: 1rem;
   width: 110px;
   height: 40px;
@@ -131,13 +133,60 @@ color: #213547;
   transition: filter 300ms;
 }
 
-.entryForm button:hover{
+.entryForm button:hover,
+.home button:hover{
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 .entryForm a{
   margin: 1rem;
 }
+
+.layout{
+ height: 100vh;
+ width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.layout header{
+border-bottom: 5px solid white;
+width: 100%;
+}
+.home{
+  flex-grow: 1;
+}
+
+.tasks{
+background-color: pink;
+color: black;
+margin: 1rem;
+width: 350px;
+min-height: 100px;
+border-radius: 20px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+}
+
+.tasks h3,
+.tasks p{
+  margin: .5rem;
+}
+
+.btns{
+  align-self: flex-end;
+}
+.btns svg{
+   margin: .5rem;
+   font-size: 20px;
+   cursor: pointer;
+}
+
 /* .logo {
   height: 6em;
   padding: 1.5em;
